; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_txtrange.c_get_child_node.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_txtrange.c_get_child_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @get_child_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_child_node(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %6, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @nsIDOMNode_GetChildNodes(i32* %7, i32** %5)
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @nsIDOMNodeList_Item(i32* %9, i32 %10, i32** %6)
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @nsIDOMNodeList_Release(i32* %12)
  %14 = load i32*, i32** %6, align 8
  ret i32* %14
}

declare dso_local i32 @nsIDOMNode_GetChildNodes(i32*, i32**) #1

declare dso_local i32 @nsIDOMNodeList_Item(i32*, i32, i32**) #1

declare dso_local i32 @nsIDOMNodeList_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
